overflow fixed

--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 100%;
     height: 701px;
     background: 
     linear-gradient(180deg, rgba(12, 57, 68, 0) 0%, rgba(12, 57, 68, 0.8) 100%), 
