--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,4 +17,5 @@
 
 body{
     overflow-x: hidden;
+    width: 100%;
 }
